--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,11 @@ version: "3.1"
 services:
   db:
     image: postgres
+    container_name: postgres_db
     restart: always
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: warehouse
+    ports:
+      - "5432:5432"
